install sbt & aws